Debug builds crash on Metal backend when an area is resized #116121

Closed
opened 2023-12-13 06:01:30 +01:00 by Douglas Paul · 2 comments
Contributor

System Information
Operating system: macOS-13.6.2-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 Max 1.2

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 02:07, hash: a7ed0e25cac5
Worked: edb7656c06c and earlier

Short description of error
Resizing any area of the UI causes Blender to crash since #115296 was merged (6ebe196c0bf).

Exact steps for others to reproduce the error

  1. On a Mac with an Apple Silicon chipset, check out commit 6ebe196c0bf or later.
  2. Run make debug to build it.
  3. Open Blender and try to resize any area of the UI. Blender crashes.

The crash does not occur with a local Release build, nor with the official nightly build.

The stack trace printed to the console is below, and I've attached the details from MacOS' Problem Report window.

0   Blender                             0x000000010343fde8 BLI_system_backtrace + 52
1   Blender                             0x00000001031c3540 _BLI_assert_print_backtrace + 24
2   Blender                             0x000000010cbdd320 _ZN7blender3gpu14MTLFrameBuffer20add_depth_attachmentEPNS0_10MTLTextureEii + 2016
3   Blender                             0x000000010cbdb03c _ZN7blender3gpu14MTLFrameBuffer18update_attachmentsEb + 396
4   Blender                             0x000000010cbdae90 _ZN7blender3gpu14MTLFrameBuffer31ensure_attachments_and_viewportEv + 52
5   Blender                             0x000000010cbd850c _ZN7blender3gpu14MTLFrameBuffer4bindEb + 160
6   Blender                             0x000000010caae294 GPU_framebuffer_bind + 80
7   Blender                             0x0000000103afff94 _ZN7blender4draw11Framebuffer4bindEv + 28
8   Blender                             0x0000000103aff9bc _ZN7blender9workbench8Instance4drawERNS_4draw7ManagerEP10GPUTextureS6_S6_ + 640
9   Blender                             0x0000000103aff708 _ZN7blender9workbench8Instance13draw_viewportERNS_4draw7ManagerEP10GPUTextureS6_S6_ + 60
10  Blender                             0x0000000103af4430 _ZL20workbench_draw_scenePv + 136
11  Blender                             0x00000001039d6100 _ZL22drw_engines_draw_scenev + 192
12  Blender                             0x00000001039d47fc DRW_draw_render_loop_ex + 1472
13  Blender                             0x00000001039d41e4 DRW_draw_view + 344
14  Blender                             0x0000000105574e2c _ZL16view3d_draw_viewPK8bContextP7ARegion + 136
15  Blender                             0x0000000105574cf0 view3d_main_region_draw + 64
16  Blender                             0x000000010412a58c _Z17ED_region_do_drawP8bContextP7ARegion + 364
17  Blender                             0x000000010354d664 _ZL24wm_draw_window_offscreenP8bContextP8wmWindowb + 1160
18  Blender                             0x000000010354cab8 _ZL14wm_draw_windowP8bContextP8wmWindow + 104
19  Blender                             0x000000010354c65c _Z14wm_draw_updateP8bContext + 184
20  Blender                             0x0000000103544a9c _Z7WM_mainP8bContext + 60
21  Blender                             0x00000001023b6cc0 _ZL20callback_main_atexitPv + 0
22  dyld                                0x00000001a882bf28 start + 2236
BLI_assert failed: source/blender/gpu/metal/mtl_framebuffer.mm:1047, add_depth_attachment(), at 'default_height_ == height_of_miplayer'
**System Information** Operating system: macOS-13.6.2-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 Max 1.2 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-13 02:07, hash: `a7ed0e25cac5` Worked: `edb7656c06c` and earlier **Short description of error** Resizing any area of the UI causes Blender to crash since #115296 was merged (`6ebe196c0bf`). **Exact steps for others to reproduce the error** 1. On a Mac with an Apple Silicon chipset, check out commit `6ebe196c0bf` or later. 2. Run `make debug` to build it. 2. Open Blender and try to resize any area of the UI. Blender crashes. The crash does not occur with a local Release build, nor with the official nightly build. The stack trace printed to the console is below, and I've attached the details from MacOS' Problem Report window. <pre> 0 Blender 0x000000010343fde8 BLI_system_backtrace + 52 1 Blender 0x00000001031c3540 _BLI_assert_print_backtrace + 24 2 Blender 0x000000010cbdd320 _ZN7blender3gpu14MTLFrameBuffer20add_depth_attachmentEPNS0_10MTLTextureEii + 2016 3 Blender 0x000000010cbdb03c _ZN7blender3gpu14MTLFrameBuffer18update_attachmentsEb + 396 4 Blender 0x000000010cbdae90 _ZN7blender3gpu14MTLFrameBuffer31ensure_attachments_and_viewportEv + 52 5 Blender 0x000000010cbd850c _ZN7blender3gpu14MTLFrameBuffer4bindEb + 160 6 Blender 0x000000010caae294 GPU_framebuffer_bind + 80 7 Blender 0x0000000103afff94 _ZN7blender4draw11Framebuffer4bindEv + 28 8 Blender 0x0000000103aff9bc _ZN7blender9workbench8Instance4drawERNS_4draw7ManagerEP10GPUTextureS6_S6_ + 640 9 Blender 0x0000000103aff708 _ZN7blender9workbench8Instance13draw_viewportERNS_4draw7ManagerEP10GPUTextureS6_S6_ + 60 10 Blender 0x0000000103af4430 _ZL20workbench_draw_scenePv + 136 11 Blender 0x00000001039d6100 _ZL22drw_engines_draw_scenev + 192 12 Blender 0x00000001039d47fc DRW_draw_render_loop_ex + 1472 13 Blender 0x00000001039d41e4 DRW_draw_view + 344 14 Blender 0x0000000105574e2c _ZL16view3d_draw_viewPK8bContextP7ARegion + 136 15 Blender 0x0000000105574cf0 view3d_main_region_draw + 64 16 Blender 0x000000010412a58c _Z17ED_region_do_drawP8bContextP7ARegion + 364 17 Blender 0x000000010354d664 _ZL24wm_draw_window_offscreenP8bContextP8wmWindowb + 1160 18 Blender 0x000000010354cab8 _ZL14wm_draw_windowP8bContextP8wmWindow + 104 19 Blender 0x000000010354c65c _Z14wm_draw_updateP8bContext + 184 20 Blender 0x0000000103544a9c _Z7WM_mainP8bContext + 60 21 Blender 0x00000001023b6cc0 _ZL20callback_main_atexitPv + 0 22 dyld 0x00000001a882bf28 start + 2236 BLI_assert failed: source/blender/gpu/metal/mtl_framebuffer.mm:1047, add_depth_attachment(), at 'default_height_ == height_of_miplayer' </pre>
Douglas Paul added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-13 06:01:31 +01:00
Member

Blender to crash since #115296 was merged (6ebe196c0b).

@Michael-Parkin-White-Apple ^ 🙂

> Blender to crash since #115296 was merged (6ebe196c0bf). @Michael-Parkin-White-Apple ^ 🙂

Repro'd and preparing a fix at the moment.

Looks like this was an oversight following recent changes to add attachment-less support. Wherein upon re-adding attachments to a farmebuffer, it validates against the previous size, rather than the previous case which would ignore size 0.

Repro'd and preparing a fix at the moment. Looks like this was an oversight following recent changes to add attachment-less support. Wherein upon re-adding attachments to a farmebuffer, it validates against the previous size, rather than the previous case which would ignore size 0.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-14 08:09:19 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116121
No description provided.